# Matrix

./: CMakeLists.txt  readme.txt
examples/: CMakeLists.txt
examples/Decomponent/: CMakeLists.txt  decomponent.cpp
examples/Generation/: CMakeLists.txt  generation.cpp
examples/Operation/: CMakeLists.txt  operation.cpp
examples/Solve_Equation/: CMakeLists.txt  solution.cpp
include/Matrix/: Matrix_core.hpp
src/: CMakeLists.txt  Col_augment.cpp  GaussianElimination.cpp  Gramm-Scmidt_Orth.cpp  Householder_transform.cpp  LinearEqaSlv.cpp  Matrix_LU.cpp  Matrix_QR.cpp  Matrix_core.hpp  Matrix_determination.cpp  Matrix_dot.cpp  Matrix_rank.cpp  Matrix_reverse.cpp  Matrix_trace.cpp  Matrix_transposition.cpp  Operator_Overload.cpp  Row_augment.cpp  main.cpp
